codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_queued_mail_after_commentary.snap
---
source: core/tests/suite/pending_input.rs
expression: snapshot
---
Scenario: /responses POST bodies (input only, redacted like other suite snapshots)

## First request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ### Orchestration mode\n- Default to an explore-first workflow: prefer explorer agents for broad repository, library, pattern, or blocker discovery that spans multiple files or separable areas.\n- Keep narrow, immediately blocking, or edit-path investigation local, especially when you need to read a file you are about to modify.\n- Ask explorers for concise findings, relevant paths, and risks, then synthesize their results before editing.
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first prompt

## Second request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ### Orchestration mode\n- Default to an explore-first workflow: prefer explorer agents for broad repository, library, pattern, or blocker discovery that spans multiple files or separable areas.\n- Keep narrow, immediately blocking, or edit-path investigation local, especially when you need to read a file you are about to modify.\n- Ask explorers for concise findings, relevant paths, and risks, then synthesize their results before editing.
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first prompt
03:message/assistant:first answer
04:message/assistant:{"author":"/root/worker","recipient":"/root","other_recipients":[],"content":"queued child update","trigger_turn":false}
