codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_user_input_no_preempt_after_reasoning.snap
---
source: core/tests/suite/pending_input.rs
expression: snapshot
---
Scenario: /responses POST bodies (input only, redacted like other suite snapshots)

## First request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ### Orchestration mode\n- Default to an explore-first workflow: prefer explorer agents for broad repository, library, pattern, or blocker discovery that spans multiple files or separable areas.\n- Keep narrow, immediately blocking, or edit-path investigation local, especially when you need to read a file you are about to modify.\n- Ask explorers for concise findings, relevant paths, and risks, then synthesize their results before editing.
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first prompt

## Second request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ### Orchestration mode\n- Default to an explore-first workflow: prefer explorer agents for broad repository, library, pattern, or blocker discovery that spans multiple files or separable areas.\n- Keep narrow, immediately blocking, or edit-path investigation local, especially when you need to read a file you are about to modify.\n- Ask explorers for concise findings, relevant paths, and risks, then synthesize their results before editing.
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first prompt
03:reasoning:summary=thinking:encrypted=true
04:function_call/shell
05:message/assistant:first answer
06:function_call_output:failed to parse function arguments: invalid type: string "echo preserved tool call", expected a sequence at line 1 column 37
07:message/user:second prompt
